# vod

examples/features/: dataloader.py  predict.py
libs/configs/vod_configs/: dataloaders.py  datasets.py  search.py  support.py
libs/dataloaders/tests/: test_merge_search_results.py
libs/dataloaders/vod_dataloaders/: dl_sampler.py  realm_collate.py  realm_dataloader.py  tokenizer_collate.py
libs/dataloaders/vod_dataloaders/core/: in_batch_negatives.py  merge.py  normalize.py  sample.py  search.py
libs/datasets/vod_datasets/: interface.py  postprocessing.py
libs/exps/vod_exps/recipes/: periodic_training.py
libs/models/: pyproject.toml  requirements.txt
libs/models/vod_models/: support.py
libs/models/vod_models/gradients/: base.py  marginal_likelihood.py  retrieval.py  vod.py
libs/models/vod_models/monitoring/: monitor.py
libs/models/vod_models/systems/: base.py  ranker.py  realm.py
libs/ops/: pyproject.toml  requirements.txt
libs/ops/vod_ops/callbacks/: export_module.py  pprint_batch.py
libs/ops/vod_ops/loops/: train.py  val.py
libs/ops/vod_ops/utils/: helpers.py  schemas.py  trainer_state.py
libs/ops/vod_ops/workflows/: benchmark.py  compute.py  train.py
libs/ops/vod_ops/workflows/predict/: compute.py  interface.py  (+2 more)
libs/search/: pyproject.toml
libs/search/vod_search/: base.py  factory.py  hybrid_search.py  sharded_search.py
libs/search/vod_search/es_search/: client.py
libs/search/vod_search/faiss_search/: build.py  build_gpu.py  client.py
libs/search/vod_search/qdrant_search/: client.py
libs/types/: pyproject.toml  requirements.txt
