[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vod-models"
version = "0.1.0"
target-version = "py311"
description = "Package for VOD model functionalities"
authors = ["Valentin Liévin <vl@raffle.ai>", "Andreas Motzfeldt", "Benjamin Starostka Jakobsen", "Jens Perregaard Thorsen"]
packages = [
    { include = 'vod_models' }
]

[tool.poetry.dependencies]
pydantic = "^2"
rich = "^13.3.1"
datasets = "^2.10.0"
loguru = "^0.7.0"
vod-configs = "*"
vod-tools = "*"
vod-types = "*"
